language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_constant_from_qualified_reference.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod\n\npub fn main() {\n  let value = mod.wibble\n  mod.wibble + value\n}\n"
---
-- mod.gleam

pub const wibble = 10

fn wobble() {
  wibble
}


-- app.gleam

import mod

pub fn main() {
  let value = mod.wibble
                  ↑▔▔▔▔▔
  mod.wibble + value
      ▔▔▔▔▔▔        
}
