language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_constant_from_unqualified_aliased_reference.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod.{wibble as wobble}\n\npub fn main() {\n  let value = mod.wibble\n  wobble + value\n}\n"
---
-- mod.gleam

pub const wibble = 10

fn wobble() {
  wibble
}


-- app.gleam

import mod.{wibble as wobble}
            ▔▔▔▔▔▔           

pub fn main() {
  let value = mod.wibble
                  ▔▔▔▔▔▔
  wobble + value
  ↑▔▔▔▔▔        
}
