language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_constant_from_unqualified_reference.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod.{wibble}\n\npub fn main() {\n  let value = mod.wibble\n  wibble + value\n}\n"
---
-- mod.gleam

pub const wibble = 10

fn wobble() {
  wibble
}


-- app.gleam

import mod.{wibble}
            ▔▔▔▔▔▔ 

pub fn main() {
  let value = mod.wibble
                  ▔▔▔▔▔▔
  wibble + value
  ↑▔▔▔▔▔        
}
