language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_echo.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\npub fn wibble() {\n  echo \"wibble\" as \"wobble\"\n}\n\nfn wobble(a) {\n  a |> echo as \"wibble\" |> echo\n\n  echo a\n}\n        "
---
-- app.gleam

pub fn wibble() {
  echo "wibble" as "wobble"
  ↑▔▔▔                     
}

fn wobble(a) {
  a |> echo as "wibble" |> echo
       ▔▔▔▔                ▔▔▔▔

  echo a
  ▔▔▔▔  
}
