language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_function_argument_label.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\npub fn replace(in string: String, each pattern: String) -> String {\n  todo\n}\n\npub fn main() {\n  replace(in: \"hello\", each: \"l\")\n}\n"
---
-- app.gleam

pub fn replace(in string: String, each pattern: String) -> String {
               ▔▔                                                  
  todo
}

pub fn main() {
  replace(in: "hello", each: "l")
          ↑▔                     
}
