language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_function_from_qualified_reference.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod\n\npub fn main() {\n  let value = mod.wibble()\n  mod.wibble()\n  value\n}\n"
---
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod

pub fn main() {
  let value = mod.wibble()
                  ↑▔▔▔▔▔  
  mod.wibble()
      ▔▔▔▔▔▔  
  value
}
