language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_local_variable_from_definition.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\npub fn main() {\n  let wibble = 10\n  let wobble = wibble + 1\n  wibble + wobble\n}\n"
---
-- app.gleam

pub fn main() {
  let wibble = 10
      ↑▔▔▔▔▔     
  let wobble = wibble + 1
               ▔▔▔▔▔▔    
  wibble + wobble
  ▔▔▔▔▔▔         
}
