language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__highlights_for_private_constant.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nconst wibble = 10\n\npub fn main() {\n  let _ = wibble\n  wibble + 4\n}\n\nfn wobble() {\n  wibble + wobble()\n}\n"
---
-- app.gleam

const wibble = 10
      ↑▔▔▔▔▔     

pub fn main() {
  let _ = wibble
          ▔▔▔▔▔▔
  wibble + 4
  ▔▔▔▔▔▔    
}

fn wobble() {
  wibble + wobble()
  ▔▔▔▔▔▔           
}
